Fixed spacing

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,7 @@
 
 .Footer {
     background: var(--liliac-to-green);
-    padding: 2rem;
+    padding: 1rem 2rem;
     text-align: center;
     position: sticky;
     bottom: 0;
