--- a/src/components/Header/Mobile/MobileHeader.scss
+++ b/src/components/Header/Mobile/MobileHeader.scss
@@ -44,7 +44,7 @@
 
     .Socials {
         position: fixed;
-        bottom: 1rem;
+        bottom: 5rem;
     }
 }
 
